--- a/shop/src/main/webapp/resources/css/shop.css
+++ b/shop/src/main/webapp/resources/css/shop.css
@@ -3,7 +3,7 @@
 #header {
 	height: 75px;
 	/* width: 99%; */
-	background-color: #BED6F8;   /* blueSky */
+	background-color: #E8BDBD;   /* japanCherry */
 }
 
 #nav {
@@ -11,7 +11,7 @@
 	width: 15%;
 	height: 550px;
 	padding: 5px;
-	background-color: #BED6F8;   /* blueSky */
+	background-color: #E8BDBD;   /* japanCherry */
 }
 
 #article {
@@ -42,13 +42,13 @@ h1 {
 .tabelleMitZebrastil {
 }
 .odd-row {
-	background-color: #ECF3FE;
+	background-color: #FFE4E1;
 }
 .even-row {
-	background-color: #FCFFFE;
+	background-color: #FAEBD7;
 }
 .active-row {
-	background-color: #FFEBDA;
+	background-color: #FFE4E1;
 	cursor: pointer;
 }
 
